--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,13 @@
             android:layout_margin="10dp"
             android:text="CardView" />
 
+        <Button
+            android:id="@+id/btn_excessive"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="过度动画" />
+
     </LinearLayout>
 
 </ScrollView>
